--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.77.0",
     "react-native-android-sms-listener": "^0.8.0",
     "react-native-background-actions": "^4.0.1",
+    "react-native-gesture-handler": "^2.23.1",
     "react-native-get-sms-android": "^2.1.0",
     "react-native-permissions": "^5.2.5",
     "react-native-safe-area-context": "^5.2.0",
