--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "FinanceManager",
+  "name": "finance-manager",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "lint": "eslint .",
+    "lint": "eslint . --fix && npm run typecheck",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@notifee/react-native": "^9.1.8",
@@ -42,6 +43,7 @@
     "@react-native/typescript-config": "0.77.0",
     "@types/jest": "^29.5.13",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
