--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "async-storage": "^0.1.0",
@@ -22,9 +23,12 @@
     "react-native": "0.77.0",
     "react-native-android-sms-listener": "^0.8.0",
     "react-native-background-actions": "^4.0.1",
+    "react-native-document-picker": "^9.3.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.23.1",
     "react-native-get-sms-android": "^2.1.0",
     "react-native-permissions": "^5.2.5",
+    "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.6.0",
     "react-native-sms-listener": "^0.0.1",
